# freedom

./: Cargo.toml  NOTES.org  TODO.org
core/freedom-async/: Cargo.toml
core/freedom-async/src/: executor.rs  lib.rs
core/freedom-fs/: Cargo.toml
core/freedom-fs/src/: lib.rs
core/freedom-log/: Cargo.toml
core/freedom-log/src/: lib.rs
core/freedom-plugins/src/: dylib.rs  lib.rs  plugins.rs
core/freedom-plugins/src/plugin/: mod.rs
core/freedom-scheme/: Cargo.toml
core/freedom-scheme/src/: lib.rs  program.rs
core/freedom-scripts/: Cargo.toml
core/freedom-scripts/src/: lib.rs  scripts.rs
crates/core/freedom-async/: Cargo.toml
crates/core/freedom-async/src/: lib.rs
crates/core/freedom-log/: Cargo.toml
crates/core/freedom-log/src/: lib.rs
crates/core/freedom-plugins/: Cargo.toml
crates/core/freedom-plugins/src/: plugin.rs
crates/core/freedom-scheme/src/: lib.rs
crates/core/freedom-scripts/: Cargo.toml
crates/core/freedom-scripts/src/: lib.rs  scripts.rs
crates/freedom/: Cargo.toml  build.rs
crates/freedom-core/: Cargo.toml
crates/freedom-core/src/: async.rs  fs.rs  lib.rs  logging.rs  scripts.rs
crates/freedom-core/src/plugins/: mod.rs
crates/freedom-core/src/plugins/plugin/: dylib.rs  mod.rs
crates/freedom-winit/: Cargo.toml
crates/freedom-winit/src/: lib.rs
crates/freedom/src/: fs.rs  lib.rs  main.rs
crates/freedom/src/async/: executor.rs  mod.rs
crates/freedom/src/fs/: into_steelval.rs  mod.rs  recursive_mode.rs  watcher.rs
crates/freedom/src/loading/: mod.rs
crates/freedom/src/log/: mod.rs
crates/freedom/src/plugins/: dylib.rs  mod.rs  plugin.rs  plugins.rs
crates/freedom/src/scheme/: async.rs  binding.rs  engine.rs  fs.rs  log.rs  mod.rs  parallel.rs  program.rs
crates/freedom/src/scripts/: mod.rs  scripts.rs
crates/freedom/src/tempfile/: mod.rs
crates/plugin/freedom-cpal/: Cargo.toml
crates/plugin/freedom-cpal/src/: device.rs  host.rs  into_steelval.rs  lib.rs  stream.rs
crates/plugin/freedom-notify/: Cargo.toml
crates/plugin/freedom-notify/src/: into_steelval.rs  lib.rs  recursive_mode.rs  watcher.rs
crates/plugin/freedom-stdio/: Cargo.toml
crates/plugin/freedom-stdio/src/: lib.rs
crates/plugin/freedom-winit/: Cargo.toml
crates/plugin/freedom-winit/src/: app.rs  callback.rs  event_loop.rs  from_steelval.rs  into_steelval.rs  lib.rs  window.rs
freedome/: Cargo.toml
freedome/src/: main.rs
plugin/freedom-winit/src/: lib.rs
scheme/: async.scm  core.scm  cpal.scm  file-watcher.scm  kernel.scm  loop.scm  main.scm  parallel.scm  print-loop.scm  repl.scm  scheme.scm  scripts.scm  winit.scm  worker.scm
scheme/fs/: mod.scm  watcher.scm
scheme/plugins/: mod.scm  plugin.scm  watcher.scm
scheme/scripts/: mod.scm  watcher.scm
