[workspace]
resolver = "3"
members = [
    "crates/core/freedom-async",
    "crates/core/freedom-log",
    "crates/core/freedom-plugins",
    "crates/core/freedom-scheme",
    "crates/core/freedom-scripts",

    "crates/library/freedom-fs",

    "crates/freedom",

    "crates/plugin/freedom-winit",
    "crates/plugin/library",
]

[workspace.dependencies]
freedom-async = { path = "crates/core/freedom-async" }
freedom-log = { path = "crates/core/freedom-log" }
freedom-plugins = { path = "crates/core/freedom-plugins" }
freedom-scheme = { path = "crates/core/freedom-scheme" }
freedom-scripts = { path = "crates/core/freedom-scripts" }

freedom-fs = { path = "crates/library/freedom-fs" }

log = "0.4.28"

steel-core = { git = "https://github.com/mattwparas/steel", rev = "6bb6f17be7cb0ce932816a697cfafc669490d489", features = [
    "markdown",        # Augment help functionality with markdown rendering
    "stacker",         # Grow the stack dynamically during transduction
    "triomphe",        # Use triophe library instead of std Arc
    "imbl",            # Use im library for immutable data structures
    "inline-captures", # Use smallvec instead of vec for closure captures
] }

# Optimize dependencies in dev builds
[profile.dev.package."*"]
opt-level = 3
