[workspace]
resolver = "3"
members = [
    "crates/freedom",

    "crates/library/freedom-build",

    "crates/plugin/freedom-stdio",
    "crates/plugin/freedom-notify",
    "crates/plugin/freedom-winit",
    "crates/plugin/library",
]

[workspace.dependencies]
freedom = { path = "crates/freedom" }

freedom-build = { path = "crates/library/freedom-build" }

log = "0.4.28"

steel-core = { git = "https://github.com/mattwparas/steel", rev = "6bb6f17be7cb0ce932816a697cfafc669490d489", features = [
    "markdown",        # Augment help functionality with markdown rendering
    "stacker",         # Grow the stack dynamically during transduction
    "triomphe",        # Use triophe library instead of std Arc
    "imbl",            # Use im library for immutable data structures
    "inline-captures", # Use smallvec instead of vec for closure captures
] }

# Optimize dependencies in dev builds
[profile.dev.package."*"]
opt-level = 3
