[package]
name = "freedom-core"
version = "1.0.0"
edition = "2024"

[lib]
crate-type = ["rlib"]

[dependencies]
steel-core = { workspace = true }

log = "0.4.28"
env_logger = "0.11.8"
libloading = "0.8.9"
smol = "2.0.2"
tempfile = "3.23.0"
notify-debouncer-full = "0.6.0"
uuid = { version = "1.18.1", features = ["v4"] }
