[package]
name = "freedom"
version = "1.0.0"
edition = "2024"

[features]
debug = []
release = []

[build-dependencies]
freedom-build = { workspace = true }

[dependencies]
freedom-log = { workspace = true }
freedom-async = { workspace = true }
freedom-scheme = { workspace = true }
freedom-plugins = { workspace = true }
freedom-scripts = { workspace = true }
