[package]
name = "freedom"
version = "1.0.0"
edition = "2024"

[features]
debug = []
release = []

[build-dependencies]
freedom-build = { workspace = true }

[dependencies]
steel-core = { workspace = true }
smol = "2.0.2"
async-executor = { version = "1.13.3", features = ["static"] }
log = "0.4.28"
env_logger = "0.11.8"
libloading = "0.8.9"
tempfile = "3.23.0"
uuid = { version = "1.18.1", features = ["v4"] }
easy-parallel = "3.3.1"
num_cpus = "1.17.0"