[package]
name = "freedom-plugins"
version = "1.0.0"
edition = "2024"

[lib]
crate-type = ["rlib"]

[dependencies]
freedom-scheme = { workspace = true }
freedom-log = { workspace = true }
freedom-fs = { workspace = true }

libloading = "0.8.9"
tempfile = "3.23.0"
uuid = { version = "1.18.1", features = ["v4"] }